[gd_scene load_steps=4 format=2]

[ext_resource path="res://battle/units/battle-unit/BattleUnit.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0.192157, 0.415686, 0.160784, 0.705882 )

[sub_resource type="CylinderMesh" id=2]
material = SubResource( 1 )
top_radius = 0.6
bottom_radius = 0.6
height = 0.001

[node name="BattleUnit" type="KinematicBody"]
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]

[node name="Selection" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="AnimationPoller" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="AnimationPoller" to="." method="_check_animation_end"]
